--- a/TASK-1.html
+++ b/TASK-1.html
@@ -11,11 +11,12 @@
     <div class="container">
         <div class="calculator">
             <form>
-                <h1>Calculator</h1>
+                <h1>Calculator-1</h1>
                 <div class="display">
                     <input type="text" name="display">
                 </div>
                 <div>
+                   
                     <input type="button" value="AC" onclick="display.value ='' " class="operator">
                     <input type="button" value="DE" onclick="display.value = display.value.toString().slice(0,-1) " class="operator">
                     <input type="button" value="." onclick="display.value +='.' " class="operator">
